Fix off center header

--- a/src/recipes/static/recipes/css/styles.css
+++ b/src/recipes/static/recipes/css/styles.css
@@ -10,13 +10,22 @@
   --spacing-xxxl: 4rem; /* 64px */
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Manrope", serif;
+  overflow-y: scroll;
 }
 
 h1,
 p {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .header,
@@ -28,14 +37,18 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: auto;
+  min-height: 80px;
   background-color: black;
-  padding: var(--spacing-sm) 0 var(--spacing-sm) 0;
+  padding: var(--spacing-sm) 0;
 }
 
 .landing-image {
+  display: block;
+  margin: 0 auto;
   width: 100%;
-  height: auto;
-  max-height: 600px;
+  height: 600px;
   object-fit: cover;
 }
 
@@ -56,13 +69,9 @@ p {
   border: 2px solid black;
 }
 
-#recipe-list {
-  font-family: "Figtree", serif;
-}
-
 #recipe-list a {
   color: black;
-  text-decoration: none;
+  font-family: "Figtree", serif;
 }
 
 .table-wrapper {
